# wmm

./: .gitignore  CMakeLists.txt  README.md  cmake.ps1  post-build.ps1  py-deploy.ps1  py-sample.ps1  setup.ps1  setup.sh
doc/: arch.html  index.html  (+2 more)
src/: Algorithm.cpp  Algorithm.h  CMakeLists.txt  DataSourceManagerWindow.cpp  DataSourceManagerWindow.h  DataSourceManagerWindow.ui  DatabaseConsole.cpp  DatabaseConsole.h  Doxyfile  EditorWindow.cpp  EditorWindow.h  ExtraFunctionWindow.cpp  ExtraFunctionWindow.h  FileSystemAccessor.cpp  FileSystemAccessor.h  JSONFormatter.cpp  JSONFormatter.h  JSONHighlighter.cpp  JSONHighlighter.h  MongoDBAccessor.cpp  MongoDBAccessor.h  MongoDBConsole.cpp  MongoDBConsole.h  PythonInteractor.cpp  PythonInteractor.h  QtTreeModel.cpp  QtTreeModel.h  TextArea.cpp  TextArea.h  TextFormatter.cpp  TextFormatter.h  TextHighlighter.cpp  TreeEditor.cpp  TreeEditor.h  TreeView.cpp  TreeView.h  main.cpp
test/: CMakeLists.txt  LegacyTest.cpp  QFileSystemModelDialog.cpp  QFileSystemModelDialog.ui  README.md  Test.cpp  TinyRandom.cpp  TinyRandom.h  gtest_main.cpp  test_algorithm.cpp  tiny_random.h  util.cpp  util.h
test/$legacy/: Test.cpp
test/data/: Riya - 一万の軌跡.json  beFour - If You Wanna Know.json  beFour - Shooting Star.json  beFour - Sometimes Dreams Come True.json  beFour - Winter in My Heart.json
test/data/doc/: Avicii - Waiting for Love.docx  One Direction - What Makes You Beautiful.docx  beFour - If You Wanna Know.docx  beFour - Sometimes Dreams Come True.docx  fripSide - late in autumn.docx  刀郎 - 圆满.docx  刀郎 - 理想.docx  四朵金花 - 世界真细小（“迪士尼乐园”中文版主题曲）.docx  彭丽媛 - 在希望的田野上.docx  林子祥 - 十分十二寸.docx  林子祥 - 谁能明白我.docx  水木年华 - 完美世界.docx  祝酒歌.docx  罗大佑 - 新生代（附访谈）.docx  罗大佑、蒋志光 - 皇后大道东.docx  群星 - 北京欢迎你.docx  群星 - 相亲相爱（相亲相爱一家人）.docx  群星 - 这是我家.docx  蔡明 - 遥远的银河.docx  虫儿飞.docx  许冠杰 - 卖身契.docx  许冠杰 - 印象.docx  许冠杰 - 心里日记.docx  许冠杰 - 我信韵律全能.docx  许冠杰 - 阿郎恋曲.docx  阎维文 - 阳光路上.docx  高胜美 - 星夜的离别.docx  高胜美 - 蝶儿蝶儿满天飞.docx  黎明 - 孤单的人孤单的我.docx  黎明 - 相逢在雨中.docx
test/google/: CMakeLists.txt  datgen.cpp  gtest_main.cpp  test_algorithm.cpp  tiny_random.cpp  tiny_random.h
test/legacy/: Test.h
test/qt/: CMakeLists.txt  MyFirstTest.cpp
test/qt/cat1/: test.cpp
test/qt/cat2/: test.cpp
test/qt/cat3/: test.cpp
test/qt/cat4/: test.cpp
test/test-data/: Haruhi的沙雕日常-gb18030.json  Haruhi的沙雕日常-utf16be.json  Haruhi的沙雕日常.json  README.md  rvalue的生草日常-gb18030.json  rvalue的生草日常.json  utf16letest.json  utf8test.json
wmm/: CMakeLists.txt  main.cpp  main.qml  setup.ps1  setup.sh
wmm/3rd/install/MSVC/duckx-1.2.2/Debug/lib/: duckx.lib
wmm/3rd/install/MSVC/duckx-1.2.2/MinSizeRel/lib/: duckx.lib
wmm/3rd/install/MSVC/duckx-1.2.2/RelWithDebInfo/lib/: duckx.lib
wmm/3rd/install/MSVC/duckx-1.2.2/Release/lib/: duckx.lib
wmm/3rd/install/MSVC/mongo-c-driver-1.21.0/Debug/lib/: bson-static-1.0.lib
wmm/3rd/install/MSVC/mongo-c-driver-1.21.0/MinSizeRel/lib/: bson-static-1.0.lib  mongoc-static-1.0.lib
wmm/3rd/install/MSVC/mongo-c-driver-1.21.0/RelWithDebInfo/lib/: bson-static-1.0.lib  mongoc-1.0.lib
wmm/3rd/install/MSVC/mongo-c-driver-1.21.0/Release/lib/: bson-1.0.lib  bson-static-1.0.lib  mongoc-static-1.0.lib
wmm/py/: requirements-3.10.txt
wmm/src/: Algorithm.cpp  Algorithm.h  DataSourceManager.cpp  DataSourceManager.h  DataSourceManager.ui  DataSourceManagerWindow.h  DatabaseConsole.cpp  DatabaseConsole.h  Editor.cpp  Editor.h  Editor.ui  EditorWindow.cpp  EditorWindow.h  EditorWindow.ui  ExtraFunctionWindow.cpp  ExtraFunctionWindow.h  FileSystemAccessor.cpp  FileSystemAccessor.h  JSONFormatter.cpp  JSONHighlighter.cpp  JSONHighlighter.h  MongoDBAccessor.cpp  MongoDBAccessor.h  MongoDBConsole.cpp  MongoDBConsole.h  MongoDBConsole.ui  PythonConsole.cpp  PythonConsole.h  PythonInteractor.cpp  PythonInteractor.h  QtGUITreeModel.cpp  QtGUITreeModel.h  QtTreeModel.cpp  QtTreeModel.h  ShellConsole.cpp  ShellConsole.h  TextArea.cpp  TextArea.h  TextHighlighter.cpp  TextHighlighter.h  (+8 more)
wmm/test/: QFileSystemModelDialog.cpp  QFileSystemModelDialog.ui  Test.cpp  Test.h
wmm/test/data/: BWO - Sunshine in the Rain.json  beFour - Winter Dream.json
wmm/test/data/doc/: BWO - Sunshine in the rain.docx  Lia - Farewell Song.docx  Riya - ひとひらの桜.docx  Taio Cruz - Telling the World.docx  beFour - Shooting Star.docx  beFour - Sunshine in December.docx  beFour - Sweet Little Bells.docx  beFour - Winter in My Heart.docx  eufonius - メグメル ~cuckool mix 2007~.docx  上原れな -  さよならのこと (动画《白色相簿2》ED ； アニメ「WHITE ALBUM2」EDテーマ).docx  乐乐 - 成长的歌（《今日最新闻》一周年主题曲）.docx  刀郎、云朵、王翰仪 - 爱是你我.docx  刘畅 - 同一首歌.docx  孙耀威 - 爱的故事（上）.docx  张杰 - 仰望星空.docx  林子祥 - 敢爱敢做.docx  林子祥 - 莫再悲.docx  林子祥 - 长路漫漫伴你闯.docx  林子祥 - 阿Lam日记.docx  校园的早晨.docx  王力宏 - 四季.docx  罗大佑 - 亚细亚的孤儿.docx  罗大佑 - 光阴的故事.docx  罗大佑 - 火车.docx  罗大佑 - 首都.docx  罗大佑、林强 - 大家免着惊.docx  群星 - 凝聚每分光.docx  群星 - 快乐天堂.docx  群星 - 明天会更好.docx  让我们荡起双桨.docx  许冠杰 - 半斤八两.docx  许冠杰 - 同舟共济.docx  许冠杰 - 夜半轻私语.docx  许冠杰 - 天才与白痴.docx  许冠杰 - 尖沙咀Susie.docx  许冠杰 - 斤两十足（full version）.docx  许冠杰 - 新的开始.docx  许冠杰 - 柔情泪.docx  许冠杰 - 爱是无言.docx  许冠杰、张国荣 - 我未惊过.docx  (+8 more)
wmm/test/test-data/: Avicii - Waiting for Love.json  Duca - フタリ.json  Haruhi的沙雕日常-utf16le.json  Lia - Ana (full ver.).json  Lia - Farewell Song.json  One Direction - What Makes You Beautiful.json  Riya - ひとひらの桜.json  Taio Cruz - Telling the World.json  Taylor Swift - Welcom to New York.json  beFour - Sunshine in December.json  beFour - Sweet Little Bells.json  beFour - Winter in My Heart.json  eufonius -  メグメル ~cuckool mix 2007~.json  fripSide - late in autumn.json  fripSide - one dream.json  hilight-test.json  rvalue的生草日常-utf16be.json  rvalue的生草日常-utf16le.json  刘畅 - 同一首歌.docx
wmm/test/test-data/doc/: Duca - フタリ.docx  Eufonius - 比翼の羽根.docx  Lia - Ana (full ver.).docx  Riya - 一万の軌跡.docx  Taylor Swift - Welcom to New York.docx  beFour - Winter Dream.docx  fripSide - One Dream（广州印象曲）.docx  ~$a - Farewell Song.docx  刘媛媛 - 人间天堂.docx  听妈妈讲那过去的事情.docx  张明敏 - 梦驼铃.docx  快乐的节日.docx  林子祥 - 真的汉子.docx  林淑容 - 昨夜星辰.docx  林淑容、楼湘灵 - 一样的天空.docx  罗大佑 - 未来的主人翁.docx  群星 - 在晴朗的天空下.docx  群星 - 地球大合唱.docx  许美静 - 城里的月光.docx  赵雷 - 成都.docx  黎明 - 眼睛想旅行.docx
(+329 files in other folders)
